--- a/ansible-demo/roles/mysql/tasks/main.yml
+++ b/ansible-demo/roles/mysql/tasks/main.yml
@@ -1,2 +1,20 @@
 ---
 # tasks file for mysql
+
+- name: Mysql server shall be up and running.
+  service:
+    name: mariadb
+    state: started
+  become: yes
+
+- name: Create mysql user
+  mysql_user: 
+    name={{ wp_mysql_user }} 
+    password={{ wp_mysql_password }} 
+    priv=*.*:ALL
+  become: yes
+        
+
+- name: Create mysql database
+  mysql_db: name={{ wp_mysql_db }} state=present
+  become: yes
