--- a/ansible-demo/playbook.yml
+++ b/ansible-demo/playbook.yml
@@ -1,8 +1,5 @@
-- hosts: wordpress
+- hosts: 127.0.0.1
   user: ansible
-  environment:
-     http_proxy: http://web-proxy.ind.hp.com:8080
-     https_proxy: https://web-proxy.ind.hp.com:8080
   roles:
     - server
     - php
